[gd_scene load_steps=6 format=3 uid="uid://bp473opt1iu8r"]

[ext_resource type="Script" uid="uid://druochcuhwmgw" path="res://ui/garage/tank_list/tank_list_item.gd" id="1_3gs4r"]
[ext_resource type="Texture2D" uid="uid://ckb5sihq2soyr" path="res://entities/tank/tanks/tiger_1/tiger_1_preview.png" id="2_kuv1v"]
[ext_resource type="Texture2D" uid="uid://c8wkdw0d74y2" path="res://global_assets/theme/main.png" id="3_kuv1v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qfjce"]
atlas = ExtResource("3_kuv1v")
region = Rect2(192, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gndlf"]
atlas = ExtResource("3_kuv1v")
region = Rect2(256, 448, 64, 64)

[node name="TankListItem" type="VBoxContainer"]
custom_minimum_size = Vector2(0, 94)
anchors_preset = -1
anchor_right = 0.2
anchor_bottom = 0.178
offset_bottom = 31.92
theme_override_constants/separation = 0
script = ExtResource("1_3gs4r")

[node name="TankListItemButton" type="Button" parent="."]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
theme_type_variation = &"SelectablePanel"
toggle_mode = true

[node name="TankImage" type="TextureRect" parent="TankListItemButton"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_kuv1v")
expand_mode = 1
stretch_mode = 5

[node name="LockColorOverlay" type="ColorRect" parent="TankListItemButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.54902)

[node name="LockOverlay" type="TextureRect" parent="TankListItemButton"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_qfjce")
expand_mode = 1
stretch_mode = 5

[node name="UnlockableOverlay" type="TextureRect" parent="TankListItemButton"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_gndlf")
expand_mode = 1
stretch_mode = 5

[node name="PriceLabel" type="Label" parent="TankListItemButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 44.0
offset_right = -8.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"GoldLabel"
text = "0 $"
horizontal_alignment = 1

[node name="PanelContainer" type="Panel" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="NameLabel" type="Label" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 7.0
offset_top = 7.0
offset_right = 121.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
text = "Tank Name"
horizontal_alignment = 1

[node name="NameLockColorOverlay" type="ColorRect" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.54902)
